<resources>
    <string name="app_name">车内有毒气体检测</string>
    <!-- Strings related to login -->
    <string name="prompt_email">电话号码</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_register_in">注册</string>
    <string name="welcome">"欢迎 !"</string>
    <string name="invalid_username">无效用户名</string>
    <string name="invalid_password">密码长度必须大于5</string>
    <string name="user_name">用户姓名</string>
    <string name="default_text">告警信息</string>
    <string name="sms_permission_rationale">发送短信需要授予权限</string>
    <string name="sms_to_hint">To:</string>
    <string name="sms_send_btn">发送</string>
    <string name="authorization_warn">过期警告</string>
    <string name="car_phone_warn">单片机电话号码设置</string>
</resources>