<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.hjq.bar.TitleBar
        android:id="@+id/mTitle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:background="@color/purple_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rightColor="@color/white"
        app:leftColor="@color/white"
        app:titleColor="@color/white"
        app:title="@string/app_name" />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_50"
        android:text="@string/user_name"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@id/mTitle" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/dp_70"
        android:layout_height="@dimen/dp_70"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_30"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mTitle"
        android:src="@drawable/avatar"
        app:civ_border_width="4dp"
        app:civ_border_color="@color/purple_200"
        />

    <TextView
        android:id="@+id/alert_textView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_300"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginBottom="@dimen/dp_10"
        android:background="@drawable/text_view_shape"
        android:gravity="center"
        android:text="@string/default_text"
        android:textAlignment="center"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/alert_imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/alert_imageView"
        android:layout_width="@dimen/dp_60"
        android:layout_height="@dimen/dp_60"
        android:layout_marginTop="44dp"
        android:contentDescription="@string/default_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alert_textView"
        app:srcCompat="@drawable/ic_normal" />

    <Button
        android:id="@+id/close_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:background="@drawable/button_shape"
        android:text="关窗"
        android:textSize="@dimen/sp_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alert_imageView" />

    <Button
        android:id="@+id/open_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_shape"
        android:text="开窗"
        android:textSize="@dimen/sp_20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alert_imageView" />

</androidx.constraintlayout.widget.ConstraintLayout>